// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-color-beta #render clearable should render component as expected (1) 1`] = `"<gux-form-field-color-beta hydrated=\\"\\"> <input slot=\\"input\\" type=\\"color\\" value=\\"#ff0000\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-color-beta>"`;

exports[`gux-form-field-color-beta #render clearable should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-color-beta #render clearable should render component as expected (2) 1`] = `"<gux-form-field-color-beta clearable=\\"\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"color\\" value=\\"#ff0000\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-color-beta>"`;

exports[`gux-form-field-color-beta #render clearable should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-color-beta #render clearable should render component as expected (3) 1`] = `"<gux-form-field-color-beta clearable=\\"true\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"color\\" value=\\"#ff0000\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-color-beta>"`;

exports[`gux-form-field-color-beta #render clearable should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-color-beta #render clearable should render component as expected (4) 1`] = `"<gux-form-field-color-beta clearable=\\"false\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"color\\" value=\\"#ff0000\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-color-beta>"`;

exports[`gux-form-field-color-beta #render clearable should render component as expected (4) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-color-beta #render clearable should render component as expected (5) 1`] = `"<gux-form-field-color-beta clearable=\\"\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"color\\" value=\\"#ff0000\\" disabled=\\"\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-color-beta>"`;

exports[`gux-form-field-color-beta #render clearable should render component as expected (5) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-disabled gux-input-container">
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-color-beta #render input attributes should render component as expected (1) 1`] = `"<gux-form-field-color-beta hydrated=\\"\\"> <input slot=\\"input\\" type=\\"color\\" value=\\"#ff0000\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-color-beta>"`;

exports[`gux-form-field-color-beta #render input attributes should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-color-beta #render input attributes should render component as expected (2) 1`] = `"<gux-form-field-color-beta hydrated=\\"\\"> <input slot=\\"input\\" type=\\"color\\" value=\\"#ff0000\\" disabled=\\"\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-color-beta>"`;

exports[`gux-form-field-color-beta #render input attributes should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-disabled gux-input-container">
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-color-beta #render input attributes should render component as expected (3) 1`] = `"<gux-form-field-color-beta hydrated=\\"\\"> <input slot=\\"input\\" type=\\"color\\" value=\\"#ff0000\\" required=\\"\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-color-beta>"`;

exports[`gux-form-field-color-beta #render input attributes should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label gux-required">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-color-beta #render label-position should render component as expected (1) 1`] = `"<gux-form-field-color-beta hydrated=\\"\\"> <input slot=\\"input\\" type=\\"color\\" value=\\"#ff0000\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-color-beta>"`;

exports[`gux-form-field-color-beta #render label-position should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-color-beta #render label-position should render component as expected (2) 1`] = `"<gux-form-field-color-beta label-position=\\"above\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"color\\" value=\\"#ff0000\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-color-beta>"`;

exports[`gux-form-field-color-beta #render label-position should render component as expected (2) 2`] = `
<div class="gux-above gux-form-field-container">
  <div class="gux-above gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-color-beta #render label-position should render component as expected (3) 1`] = `"<gux-form-field-color-beta label-position=\\"beside\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"color\\" value=\\"#ff0000\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-color-beta>"`;

exports[`gux-form-field-color-beta #render label-position should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-color-beta #render label-position should render component as expected (4) 1`] = `"<gux-form-field-color-beta label-position=\\"screenreader\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"color\\" value=\\"#ff0000\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-color-beta>"`;

exports[`gux-form-field-color-beta #render label-position should render component as expected (4) 2`] = `
<div class="gux-form-field-container gux-screenreader">
  <div class="gux-form-field-label gux-screenreader">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;
